--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -10,6 +10,10 @@ layout: page
     {% include index/carousel.html title="Sample Items" height="300" %}
   
   </div>
+
+  ## About Muscatine
+  Muscatine is a scenic town in eastern Iowa and the county seat of Muscatine County. Built on the banks of the Mississippi River, Muscatine is a mixture of farmlands and forests, modern suburbs and old brick buildings. Before white settlers arrived, the area that would become Muscatine was inhabitated by the Sac and Fox Native American nations. White settlement in present-day Muscatine began after the land was ceded to the United States following Black Hawk's War in 1832. Colonel George Davenport (namesake of the nearby city of Davenport) established a trading post in modern day Muscatine. Colonel George Vanater bought Colonel Davenport's trading post in 1835. In 1836, Colonel Vanater founded the town of Bloomington on the land surrounding his trading post. The postal service had trouble delivering mail to Bloomington becasue they kept confusing it with Bloomington, Illinois; Bloomington, Indiana; and even Burlington, Iowa. Thus, Bloomington changed its name to Muscatine in 1850, after a group of Native Americans (the Mascoutins) that used to inhabit nearby Muscatine Island in the Mississippi River. 
+  
   <div class="col-md-4">  
 
     {% include index/time.html %}
