--- a/_layouts/home-infographic.html
+++ b/_layouts/home-infographic.html
@@ -7,9 +7,9 @@ layout: page
   <div class="col-md-8">
 
     {% include index/description.html %}
-    {% <h1>About Muscatine</h1>
+    <h1>About Muscatine</h1>
     <p>Muscatine is a scenic town in eastern Iowa and the county seat of Muscatine County. Built on the banks of the Mississippi River, Muscatine is a mixture of farmlands and forests, modern suburbs and old brick buildings. Before white settlers arrived, the area that would become Muscatine was inhabitated by the Sac and Fox Native American nations. White settlement in present-day Muscatine began after the land was ceded to the United States following Black Hawk's War in 1832. Colonel George Davenport (namesake of the nearby city of Davenport) established a trading post in modern day Muscatine. Colonel George Vanater bought Colonel Davenport's trading post in 1835. In 1836, Colonel Vanater founded the town of Bloomington on the land surrounding his trading post. The postal service had trouble delivering mail to Bloomington becasue they kept confusing it with Bloomington, Illinois; Bloomington, Indiana; and even Burlington, Iowa. Thus, Bloomington changed its name to Muscatine in 1850, after a group of Native Americans (the Mascoutins) that used to inhabit nearby Muscatine Island in the Mississippi River. </p>
-    <p>Immigrants to Muscatine tended to arrive in "waves": members of a certain ethnic group would immigrate to Muscatine in large numbers over a certain period of time. This exhibit seeks to determine which ethnic groups came to Muscatine in waves and when those waves were.</p> %}
+    <p>Immigrants to Muscatine tended to arrive in "waves": members of a certain ethnic group would immigrate to Muscatine in large numbers over a certain period of time. This exhibit seeks to determine which ethnic groups came to Muscatine in waves and when those waves were.</p>
     {% include index/carousel.html title="Sample Items" height="300" %}
   
   </div>
